--- a/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.html
+++ b/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>4.0 - Changing HTML Content</title>
+    </head>
     <body>
         <!-- JavaScript can use id's to manipulate HTML code. -->
         <!-- It does this by finding the HTML element id name and then changes the element content. -->
@@ -33,6 +36,6 @@
     </body>
 
     <footer>
-        <script src="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/4.0_JavaScript-and-HTML/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.js"></script>
+        <script src="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.js"></script>
     </footer>
 </html>
