--- a/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.html
+++ b/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>4.1 - Changing CSS Content</title>
-        <link rel="stylesheet" href="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.css/">
+        <link rel="stylesheet" href="4.1_Changing-CSS-Content.css/">
     </head>
     <body>
 
@@ -36,6 +36,6 @@
     </body>
 
     <footer>
-        <script src="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.js/"></script>
+        <script src="4.1_Changing-CSS-Content.js/"></script>
     </footer>
 </html>
