--- a/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.html
+++ b/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>4.0 - Changing HTML Content</title>
+        <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
+
     </head>
     <body>
         <!-- JavaScript can use id's to manipulate HTML code. -->
