--- a/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.html
+++ b/4.0_Combining-JavaScript/4.1_Changing-CSS-Content/4.1_Changing-CSS-Content.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>4.1 - Changing CSS Content</title>
+        <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
+        
         <link rel="stylesheet" href="4.1_Changing-CSS-Content.css/">
     </head>
     <body>
