--- a/4.0_Combining-JavaScript/4.2_Buttons/4.2_Buttons.html
+++ b/4.0_Combining-JavaScript/4.2_Buttons/4.2_Buttons.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>4.2 - Buttons</title>
+        <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
 
         <link rel="stylesheet" href="4.2_Buttons.css"/>
     </head>
