--- a/4.0_Combining-JavaScript/4.3_Mouse-Pointer-Events/4.3_Mouse-Pointer-Events.html
+++ b/4.0_Combining-JavaScript/4.3_Mouse-Pointer-Events/4.3_Mouse-Pointer-Events.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>4.3 - Mouse Pointer</title>
-        <link rel="stylesheet" href="4.3_Mouse-Pointer.css"/>
+        <title>4.3 - Mouse Pointer Events</title>
+        <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
+        
+        <link rel="stylesheet" href="4.3_Mouse-Pointer-Events.css"/>
     </head>
     <body>
         <!-- This tutorial shows how to detect when the mouse pointer interacts within an HTML element. -->
@@ -12,6 +14,6 @@
     </body>
 
     <footer>
-        <script src="4.3_Mouse-Pointer.js"></script>
+        <script src="4.3_Mouse-Pointer-Events.js"></script>
     </footer>
 </html>
