--- a/5.0_Combining-JavaScript/5.5_Displaying-Object-Properties/5.5_Displaying-Object-Properties.html
+++ b/5.0_Combining-JavaScript/5.5_Displaying-Object-Properties/5.5_Displaying-Object-Properties.html
@@ -6,8 +6,15 @@
     </head>
 
     <body>
-        <p> Click the button to populate Bruce Wayne's villains.</p>
-        <button onclick="populate()">POPULATE</button>
+        <p>Click the button to populate the superhero.</p>
+        <button onclick="populateHero()">POPULATE 1</button>
+
+        <p id="showHero"></p>
+
+        <hr>
+
+        <p>Click the button to populate Bruce Wayne's villains.</p>
+        <button onclick="populateVill()">POPULATE 2</button>
         
         <p id="showVillains"></p>
     </body>
