Updated Chapter 6 tutorials

--- a/6.0_Combining-JavaScript/6.0_Changing-HTML-Content/Changing-HTML-Content.html
+++ b/6.0_Combining-JavaScript/6.0_Changing-HTML-Content/Changing-HTML-Content.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>4.0 - Changing HTML Content</title>
+        <title>6.0 - Changing HTML Content</title>
         <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
 
     </head>
@@ -38,6 +38,6 @@
     </body>
 
     <footer>
-        <script src="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/4.0_Combining-JavaScript/4.0_Changing-HTML-Content/4.0_Changing-HTML-Content.js"></script>
+        <script src="/Users/JRDN/Documents/Coding/JavaScript/4.0_Learning/6.0_Combining-JavaScript/6.0_Changing-HTML-Content/Changing-HTML-Content.js"></script>
     </footer>
 </html>
