--- a/6.0_Combining-JavaScript/6.1_Changing-CSS-Content/Changing-CSS-Content.html
+++ b/6.0_Combining-JavaScript/6.1_Changing-CSS-Content/Changing-CSS-Content.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>4.1 - Changing CSS Content</title>
+        <title>6.1 - Changing CSS Content</title>
         <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
         
-        <link rel="stylesheet" href="4.1_Changing-CSS-Content.css/">
+        <link rel="stylesheet" href="Changing-CSS-Content.css/">
     </head>
     <body>
 
@@ -23,10 +23,10 @@
         <hr>
 
         <!-- You can hide text using the CSS style property "display". -->
-        <p id="hideMe">You can hide this text using JavaScript.</p>
+        <p id="ShowHideText">You can hide and reveal this text using JavaScript.</p>
 
         <button type="button" onclick="hideText()">Click to Hide Text</button>
-
+        <button type="button" onclick="showText()">Click to Show Text</button>
         <hr>
 
         <!-- You can reveal text using the CSS style property "display". -->
@@ -34,10 +34,10 @@
                    when you click on the button. -->
         <p id="showMe">You can reveal this text using JavaScript.</p>
 
-        <button type="button" onclick="showText()">Click to Show Text</button>
+        <button type="button" onclick="showTextV2()">Click to Show Text</button>
     </body>
 
     <footer>
-        <script src="4.1_Changing-CSS-Content.js/"></script>
+        <script src="Changing-CSS-Content.js/"></script>
     </footer>
 </html>
