--- a/6.0_Combining-JavaScript/6.3_Mouse-Pointer-Events/Mouse-Pointer-Events.html
+++ b/6.0_Combining-JavaScript/6.3_Mouse-Pointer-Events/Mouse-Pointer-Events.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>4.3 - Mouse Pointer Events</title>
+        <title>6.3 - Mouse Pointer Events</title>
         <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
         
-        <link rel="stylesheet" href="4.3_Mouse-Pointer-Events.css"/>
+        <link rel="stylesheet" href="Mouse-Pointer-Events.css"/>
     </head>
     <body>
         <!-- This tutorial shows how to detect when the mouse pointer interacts within an HTML element. -->
+        <!-- The HTML attributes onmouseover and onmouseout help us detect where the mouse is. -->
         <div id="yellow-box" onmouseover="mouseIn()" onmouseout="mouseOut()"></div>
 
+        <!-- Be default, we state this line to show that the mouse pointer is not in the yellow box. -->
         <p id="mouseBox" style="color:red;">The mouse pointer IS NOT in the yellow box. &#x274C;</p>
     </body>
 
     <footer>
-        <script src="4.3_Mouse-Pointer-Events.js"></script>
+        <script src="Mouse-Pointer-Events.js"></script>
     </footer>
 </html>
