Minor grammar tune-ups in Chapter 1 tutorials

--- a/6.0_Combining-JavaScript/6.5_Displaying-Object-Properties/Displaying-Object-Properties.html
+++ b/6.0_Combining-JavaScript/6.5_Displaying-Object-Properties/Displaying-Object-Properties.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>5.5 - Displaying Object Properties</title>
+        <title>6.5 - Displaying Object Properties</title>
         <link rel="icon" type="image/x-icon" href="../../0.0_Pictures/JD-Logo-King-Custom.png">
     </head>
 
@@ -20,6 +20,6 @@
     </body>
 
     <footer>
-        <script src="5.5_Displaying-Object-Properties.js"></script>
+        <script src="Displaying-Object-Properties.js"></script>
     </footer>
 </html>
